--- a/Magick++/lib/Magick++/Makefile.in
+++ b/Magick++/lib/Magick++/Makefile.in
@@ -37,7 +37,7 @@ host_triplet = @host@
 target_triplet = @target@
 pkgdatadir = $(datadir)/Magick++
 pkglibdir = $(libdir)/Magick++
-pkgincludedir = $(includedir)/Magick++
+pkgincludedir = $(includedir)/GraphicsMagick/Magick++
 ACLOCAL = @ACLOCAL@
 AMDEP_FALSE = @AMDEP_FALSE@
 AMDEP_TRUE = @AMDEP_TRUE@
