--- a/magick/GraphicsMagick-config.in
+++ b/magick/GraphicsMagick-config.in
@@ -1,14 +1,14 @@
 #!/bin/sh
 #
-# Configure options script for re-calling ImageMagick compilation
-# options required to use the ImageMagick library.
+# Configure options script for re-calling GraphicsMagick compilation
+# options required to use the GraphicsMagick library.
 #
 # Concept derived from gtk-config in the Gtk package except that Autoconf-style
 # configuration information is presented instead so that it may be used more
 # effictively in configure scripts.
 #
 usage="\
-Usage: Magick-config [--cflags] [--cppflags] [--exec-prefix] [--ldflags] [--libs] [--prefix] [--version]"
+Usage: GraphicsMagick-config [--cflags] [--cppflags] [--exec-prefix] [--ldflags] [--libs] [--prefix] [--version]"
 
 if test $# -eq 0; then
       echo "${usage}" 1>&2
@@ -30,13 +30,13 @@ while test $# -gt 0; do
       echo '@CFLAGS@'
       ;;
     --cppflags)
-      echo "-I@INCLUDE_DIR@ @CPPFLAGS@"
+      echo "-I@INCLUDE_DIR@/GraphicsMagick @CPPFLAGS@"
       ;;
     --ldflags)
       echo '-L@LIB_DIR@ @LDFLAGS@'
       ;;
     --libs)
-      LIBS="-lMagick @MAGICK_DEP_LIBS@"
+      LIBS="-lGraphicsMagick @MAGICK_DEP_LIBS@"
       echo "$LIBS"
       ;;
     *)
