--- a/utilities/Makefile.in
+++ b/utilities/Makefile.in
@@ -15,33 +15,33 @@
 @SET_MAKE@
 
 #
-#  Makefile for building ImageMagick utilities
+#  Makefile for building GraphicsMagick utilities
 #
-# Copyright (C) 2001 ImageMagick Studio, a non-profit organization dedicated
+# Copyright (C) 2002 GraphicsMagick Group, a non-profit organization dedicated
 # to making software imaging solutions freely available.
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
-# copy of this software and associated documentation files ("ImageMagick"),
-# to deal in ImageMagick without restriction, including without limitation
+# copy of this software and associated documentation files ("GraphicsMagick"),
+# to deal in GraphicsMagick without restriction, including without limitation
 # the rights to use, copy, modify, merge, publish, distribute, sublicense
-# and/or sell copies of ImageMagick, and to permit persons to whom the
-# ImageMagick is furnished to do so, subject to the following conditions:
+# and/or sell copies of GraphicsMagick, and to permit persons to whom the
+# GraphicsMagick is furnished to do so, subject to the following conditions:
 #
 # The above copyright notice and this permission notice shall be included in
-# all copies or substantial portions of ImageMagick.
+# all copies or substantial portions of GraphicsMagick.
 #
 # The software is provided "as is", without warranty of any kind, express or
 # implied, including but not limited to the warranties of merchantability,
 # fitness for a particular purpose and noninfringement.  In no event shall
-# ImageMagick Studio be liable for any claim, damages or other liability,
+# GraphicsMagick Group be liable for any claim, damages or other liability,
 # whether in an action of contract, tort or otherwise, arising from, out of
-# or in connection with ImageMagick or the use or other dealings in
-# ImageMagick.
+# or in connection with GraphicsMagick or the use or other dealings in
+# GraphicsMagick.
 #
-# Except as contained in this notice, the name of the ImageMagick Studio
+# Except as contained in this notice, the name of the GraphicsMagick Group
 # shall not be used in advertising or otherwise to promote the sale, use or
-# other dealings in ImageMagick without prior written authorization from the
-# ImageMagick Studio.
+# other dealings in GraphicsMagick without prior written authorization from the
+# GraphicsMagick Group.
 #
 
 srcdir = @srcdir@
@@ -341,7 +341,7 @@ xml2_config = @xml2_config@
 # Don't require all the GNU mandated files
 AUTOMAKE_OPTIONS = 1.7 foreign
 
-MAGICK_LIB = ../magick/libMagick.la # libtool library name
+MAGICK_LIB = ../magick/libGraphicsMagick.la # libtool library name
 INCLUDES = -I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/magick
 
 STDMANPAGES = ImageMagick.1  composite.1 conjure.1 convert.1  identify.1 \
@@ -433,49 +433,59 @@ PROGRAMS = $(bin_PROGRAMS)
 
 am_animate_OBJECTS = animate.$(OBJEXT)
 animate_OBJECTS = $(am_animate_OBJECTS)
-@WITH_MODULES_TRUE@animate_DEPENDENCIES = ../magick/libMagick.la \
+@WITH_MODULES_TRUE@animate_DEPENDENCIES = ../magick/libGraphicsMagick.la \
 @WITH_MODULES_TRUE@	$(top_builddir)/ltdl/libltdlc.la
-@WITH_MODULES_FALSE@animate_DEPENDENCIES = ../magick/libMagick.la
+@WITH_MODULES_FALSE@animate_DEPENDENCIES = \
+@WITH_MODULES_FALSE@	../magick/libGraphicsMagick.la
 am_composite_OBJECTS = composite.$(OBJEXT)
 composite_OBJECTS = $(am_composite_OBJECTS)
-@WITH_MODULES_TRUE@composite_DEPENDENCIES = ../magick/libMagick.la \
+@WITH_MODULES_TRUE@composite_DEPENDENCIES = \
+@WITH_MODULES_TRUE@	../magick/libGraphicsMagick.la \
 @WITH_MODULES_TRUE@	$(top_builddir)/ltdl/libltdlc.la
-@WITH_MODULES_FALSE@composite_DEPENDENCIES = ../magick/libMagick.la
+@WITH_MODULES_FALSE@composite_DEPENDENCIES = \
+@WITH_MODULES_FALSE@	../magick/libGraphicsMagick.la
 am_conjure_OBJECTS = conjure.$(OBJEXT)
 conjure_OBJECTS = $(am_conjure_OBJECTS)
-@WITH_MODULES_TRUE@conjure_DEPENDENCIES = ../magick/libMagick.la \
+@WITH_MODULES_TRUE@conjure_DEPENDENCIES = ../magick/libGraphicsMagick.la \
 @WITH_MODULES_TRUE@	$(top_builddir)/ltdl/libltdlc.la
-@WITH_MODULES_FALSE@conjure_DEPENDENCIES = ../magick/libMagick.la
+@WITH_MODULES_FALSE@conjure_DEPENDENCIES = \
+@WITH_MODULES_FALSE@	../magick/libGraphicsMagick.la
 am_convert_OBJECTS = convert.$(OBJEXT)
 convert_OBJECTS = $(am_convert_OBJECTS)
-@WITH_MODULES_TRUE@convert_DEPENDENCIES = ../magick/libMagick.la \
+@WITH_MODULES_TRUE@convert_DEPENDENCIES = ../magick/libGraphicsMagick.la \
 @WITH_MODULES_TRUE@	$(top_builddir)/ltdl/libltdlc.la
-@WITH_MODULES_FALSE@convert_DEPENDENCIES = ../magick/libMagick.la
+@WITH_MODULES_FALSE@convert_DEPENDENCIES = \
+@WITH_MODULES_FALSE@	../magick/libGraphicsMagick.la
 am_display_OBJECTS = display.$(OBJEXT)
 display_OBJECTS = $(am_display_OBJECTS)
-@WITH_MODULES_TRUE@display_DEPENDENCIES = ../magick/libMagick.la \
+@WITH_MODULES_TRUE@display_DEPENDENCIES = ../magick/libGraphicsMagick.la \
 @WITH_MODULES_TRUE@	$(top_builddir)/ltdl/libltdlc.la
-@WITH_MODULES_FALSE@display_DEPENDENCIES = ../magick/libMagick.la
+@WITH_MODULES_FALSE@display_DEPENDENCIES = \
+@WITH_MODULES_FALSE@	../magick/libGraphicsMagick.la
 am_identify_OBJECTS = identify.$(OBJEXT)
 identify_OBJECTS = $(am_identify_OBJECTS)
-@WITH_MODULES_TRUE@identify_DEPENDENCIES = ../magick/libMagick.la \
+@WITH_MODULES_TRUE@identify_DEPENDENCIES = \
+@WITH_MODULES_TRUE@	../magick/libGraphicsMagick.la \
 @WITH_MODULES_TRUE@	$(top_builddir)/ltdl/libltdlc.la
-@WITH_MODULES_FALSE@identify_DEPENDENCIES = ../magick/libMagick.la
+@WITH_MODULES_FALSE@identify_DEPENDENCIES = \
+@WITH_MODULES_FALSE@	../magick/libGraphicsMagick.la
 am_import_OBJECTS = import.$(OBJEXT)
 import_OBJECTS = $(am_import_OBJECTS)
-@WITH_MODULES_TRUE@import_DEPENDENCIES = ../magick/libMagick.la \
+@WITH_MODULES_TRUE@import_DEPENDENCIES = ../magick/libGraphicsMagick.la \
 @WITH_MODULES_TRUE@	$(top_builddir)/ltdl/libltdlc.la
-@WITH_MODULES_FALSE@import_DEPENDENCIES = ../magick/libMagick.la
+@WITH_MODULES_FALSE@import_DEPENDENCIES = ../magick/libGraphicsMagick.la
 am_mogrify_OBJECTS = mogrify.$(OBJEXT)
 mogrify_OBJECTS = $(am_mogrify_OBJECTS)
-@WITH_MODULES_TRUE@mogrify_DEPENDENCIES = ../magick/libMagick.la \
+@WITH_MODULES_TRUE@mogrify_DEPENDENCIES = ../magick/libGraphicsMagick.la \
 @WITH_MODULES_TRUE@	$(top_builddir)/ltdl/libltdlc.la
-@WITH_MODULES_FALSE@mogrify_DEPENDENCIES = ../magick/libMagick.la
+@WITH_MODULES_FALSE@mogrify_DEPENDENCIES = \
+@WITH_MODULES_FALSE@	../magick/libGraphicsMagick.la
 am_montage_OBJECTS = montage.$(OBJEXT)
 montage_OBJECTS = $(am_montage_OBJECTS)
-@WITH_MODULES_TRUE@montage_DEPENDENCIES = ../magick/libMagick.la \
+@WITH_MODULES_TRUE@montage_DEPENDENCIES = ../magick/libGraphicsMagick.la \
 @WITH_MODULES_TRUE@	$(top_builddir)/ltdl/libltdlc.la
-@WITH_MODULES_FALSE@montage_DEPENDENCIES = ../magick/libMagick.la
+@WITH_MODULES_FALSE@montage_DEPENDENCIES = \
+@WITH_MODULES_FALSE@	../magick/libGraphicsMagick.la
 
 DEFAULT_INCLUDES =  -I. -I$(srcdir) -I$(top_builddir)/magick
 depcomp = $(SHELL) $(top_srcdir)/depcomp
