Updated to work with Perl 5.8.0

--- a/PerlMagick/Makefile.nt
+++ b/PerlMagick/Makefile.nt
@@ -47,7 +47,7 @@ WriteMakefile(
 sub MY::postamble
 {
         '
-Image-Magick.tar.gz: ppd pure_all htmlifypods manifypods
+Image-Magick.tar.gz: ppd pure_all #htmlifypods manifypods
 	if exist Image-Magick.tar.gz del Image-Magick.tar.gz
 	if exist Image-Magick.tar del Image-Magick.tar
         $(TAR) $(TARFLAGS) Image-Magick.tar blib
